GNOME Bugzilla – Bug 768731
Prefix signal ID enum entries with SIGNAL_ to avoid using EOF
Last modified: 2016-07-29 19:09:18 UTC
Trivial patch attached. Fixes compilation under JHBuild on Fedora 23 for me.
Created attachment 331326 [details] [review] Prefix signal ID enum entries with SIGNAL_ to avoid using EOF glibc defines EOF as a macro, so we cannot use that as the name for a signal ID enum entry, otherwise it will be preprocessed to some number if we end up with the wrong header included, and compilation will fail. Instead, prefix signal ID enum entries with ‘SIGNAL_’ in SoupCacheClientInputStream and SoupClientInputStream.
Comment on attachment 331326 [details] [review] Prefix signal ID enum entries with SIGNAL_ to avoid using EOF sure
Thanks for the fast review. Attachment 331326 [details] pushed as 72c5759 - Prefix signal ID enum entries with SIGNAL_ to avoid using EOF
*** Bug 769313 has been marked as a duplicate of this bug. ***